--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -250,7 +250,7 @@
                             </td>
                             {# Title #}
                             <td>
-                                <strong><a href="{{ res.get_absolute_url }}">{{ res.content_type.title }}</a>
+                                <strong><a href="{{ res.get_absolute_url }}">{{ res.title }}</a>
                                 </strong>
                             </td>
                             {# First Author #}
