--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -125,45 +125,46 @@
                                     {% endif %}
 
                                     <br>
-
-                                    {% if group.is_user_member %}
-                                        <div class="text-center">
-                                            <h4 class="flag-joined"><span class="glyphicon glyphicon-ok"></span> You have joined this group</h4>
-                                        </div>
-                                    {% elif group.join_request_waiting_owner_action %}
-                                        <h4 class="flag-joined"><span class="glyphicon glyphicon-send"></span> Request Sent</h4>
-
-                                    {% elif group.join_request_waiting_user_action %}
-                                        <div>
-                                            <span class="flag-joined">You have been invited to join this group!</span>
-                                            <br><br>
-                                            <div class="height-fix">
-                                                <form class="act-on-request height-fix"
-                                                      action="/hsapi/_internal/act-on-group-membership-request/{{ group.join_request.id }}/accept/"
-                                                      method="POST">
-                                                    {% csrf_token %}
-                                                    <a class="btn btn-success btn-act-on-request" data-user-action="Accept">Accept</a>
-                                                </form>
-
-                                                <form class="act-on-request height-fix"
-                                                      action="/hsapi/_internal/act-on-group-membership-request/{{ group.join_request.id }}/reject/"
-                                                      method="POST">
-                                                    {% csrf_token %}
-                                                    <a class="btn btn-default btn-act-on-request">
-                                                        Decline
-                                                    </a>
-                                                </form>
+                                    {% if is_authenticated %}
+                                        {% if group.is_user_member %}
+                                            <div class="text-center">
+                                                <h4 class="flag-joined"><span class="glyphicon glyphicon-ok"></span> You have joined this group</h4>
                                             </div>
-                                        </div>
-                                    {% elif profile_user %}
-                                        <form id="join-{{ group.id }}" method="post"
-                                              action="/hsapi/_internal/make-group-membership-request/{{ group.id }}/">
-                                            {% csrf_token %}
-                                            <a href="#"
-                                               data-form-id="join-{{ group.id }}"
-                                               class="btn btn-primary btn-ask-to-join"
-                                               role="button">Ask to join</a>
-                                        </form>
+                                        {% elif group.join_request_waiting_owner_action %}
+                                            <h4 class="flag-joined"><span class="glyphicon glyphicon-send"></span> Request Sent</h4>
+
+                                        {% elif group.join_request_waiting_user_action %}
+                                            <div>
+                                                <span class="flag-joined">You have been invited to join this group!</span>
+                                                <br><br>
+                                                <div class="height-fix">
+                                                    <form class="act-on-request height-fix"
+                                                          action="/hsapi/_internal/act-on-group-membership-request/{{ group.join_request.id }}/accept/"
+                                                          method="POST">
+                                                        {% csrf_token %}
+                                                        <a class="btn btn-success btn-act-on-request" data-user-action="Accept">Accept</a>
+                                                    </form>
+
+                                                    <form class="act-on-request height-fix"
+                                                          action="/hsapi/_internal/act-on-group-membership-request/{{ group.join_request.id }}/reject/"
+                                                          method="POST">
+                                                        {% csrf_token %}
+                                                        <a class="btn btn-default btn-act-on-request">
+                                                            Decline
+                                                        </a>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        {% else %}
+                                            <form id="join-{{ group.id }}" method="post"
+                                                  action="/hsapi/_internal/make-group-membership-request/{{ group.id }}/">
+                                                {% csrf_token %}
+                                                <a href="#"
+                                                   data-form-id="join-{{ group.id }}"
+                                                   class="btn btn-primary btn-ask-to-join"
+                                                   role="button">Ask to join</a>
+                                            </form>
+                                        {% endif %}
                                     {% endif %}
                                 </div>
                             </div>
