--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -112,4 +112,35 @@
         {% endif %}
     {% endifinstalled %}
 </ul>
+
+{# ======= Modal window begins =======#}
+<div class="modal fade" id="submit-title-dialog" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true" style="postion: absolute; z-index: -10000">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Enter a title</h4>
+            </div>
+            <div class="modal-body">
+                <div class="warnings-list">
+                    <div>Consider saving a copy of the files before you delete it if it is
+                        important to you.
+                    </div>
+                    <br>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel
+                </button>
+                <button id="btn-resource-create" type="button" class="btn btn-default"
+                        data-dismiss="modal">Submit
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+{# ======= Modal window ends =======#}
+
 {% endspaceless %}
