Add site wide modals html include to base template

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -222,7 +222,8 @@
         <div class="main-container">
             {% block main %}{% endblock %}
             {% block after_main %}{% endblock %}
-                </div>
+            {% include "pages/site-wide-modals.html" %}
+        </div>
     {% endblock %}
 
     <!-- Foooter
