--- a/theme/templates/pages/site-wide-modals.html
+++ b/theme/templates/pages/site-wide-modals.html
@@ -6,21 +6,21 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"
                         aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Enter a title</h4>
+                <h4 class="modal-title">Create a Resource</h4>
             </div>
             <div class="modal-body">
                 <div class="warnings-list">
-                    <div>Consider saving a copy of the files before you delete it if it is
-                        important to you.
+                    <div>Enter the title for the new resource.
                     </div>
                     <br>
+                    <input class="form-control input-sm textinput textInput" id="txt-title" maxlength="300" name="value" type="text" placeholder="Resource Title" value="">
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel
                 </button>
-                <button id="btn-resource-create" type="button" class="btn btn-primary"
-                        data-dismiss="modal">Submit
+                <button id="btn-resource-create" type="button" data-value="" class="btn btn-primary"
+                        data-dismiss="modal">Create
                 </button>
             </div>
         </div>
